# rkhs-shap

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: on-pr.yml
examples/: california_rkhs.ipynb  n_features_rkhs.ipynb  test_additivity.py
examples/upstream_repo_experiments/experiments/BananaShapley/: experiment1_estimating_osv.py
examples/upstream_repo_experiments/experiments/Regularisation/: correlated_linear_model.py  experiment3_ISV_reg.py  experiment4_OSV_reg.py
examples/upstream_repo_experiments/large_scale_gpu_experiments/: rankability_test.py  rkhs_shap.py  shap_RKHS.py  tensor_CG.py
examples/upstream_repo_experiments/large_scale_gpu_experiments/GPGP/: GP_model.py  KRR_model.py  kernel.py
experiments/BananaShapley/: banana_distribution.py  experiment1_estimating_osv.py  experiment2_run_time_analysis.py  gshap_banana.py
experiments/Regularisation/: correlated_linear_model.py  experiment3_ISV_reg.py  experiment4_OSV_reg.py
large_scale_gpu_experiments/: RKHS_SHAP_preprocess.py  debug_train_model_RKHS.py  post_process_plots_RKHS.py  pref_shap.py  rankability_test.py  rkhs_shap.py  shap_RKHS.py  utils.py
large_scale_gpu_experiments/GPGP/: GP_model.py  KRR_model.py  gpytorch_modules.py  keops_modules.py
src/: rkhs_shap_exact.py
src/examples/: exact_gp.py
src/rkhs_shap/: __init__.py  exact_gp.py  kernel_approx.py  kernel_ridge_regression.py  rkhs_shap_approx.py  rkhs_shap_base.py  rkhs_shap_exact.py  sampling.py  shapley_regulariser.py  subset_kernel.py  utils.py
src/rkhs_shap/examples/: exact_gp.py
tests/: __init__.py  conftest.py  test_approx_rkhs_shap.py  test_exact_rkhs_shap.py  test_sampling.py  test_subset_kernel.py  test_utils.py
