[project]
name = "rkhs-shap"
version = "0.1.0"
description = "RKHS-SHAP: Shapley Values for Kernel Methods"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # "gpytorch>=1.14",
    "gpytorch<1.9",  # TODO port to gpytorch>=1.9
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "shap>=0.49.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]
