[project]
name = "rkhs-shap"
version = "0.1.0"
description = "RKHS-SHAP: Shapley Values for Kernel Methods"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "gpytorch>=1.9",
    "numpy>=2",
    "scikit-learn>=1",
    "scipy>=1",
    "shap>=0.45",
    "tqdm>=4",
]

[dependency-groups]
dev = [
    "matplotlib>=3",
    "pyright>=1.1.407",
    "pytest>=9",
    "ruff>=0.14",
]

[tool.pyright]
# include = ["src", "tests"]
include = ["tests"]
# reportUnknownMemberType = false
# reportUnknownArgumentType = false
# reportUnknownVariableType = false

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
