[project]
name = "rkhs-shap"
version = "0.1.0"
description = "RKHS-SHAP: Shapley Values for Kernel Methods"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "gpytorch>=1.9",
    "numpy>=1",
    "scikit-learn>=1",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3",
    "pyright>=1.1.407",
    "pytest>=9",
    "ruff>=0.14",
    "seaborn>=0.13.2",
    "shap>=0.45",
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
reportUnusedVariable = "error"
# TODO: Re-enable some of these reports if possible
reportArgumentType = false
reportAttributeAccessIssue = false
reportOperatorIssue = false
reportReturnType = false
reportOptionalMemberAccess = false
reportCallIssue = false
reportIndexIssue = false
reportGeneralTypeIssues = false


[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
